@@ -1,5 +1,9 @@
 2000-08-31  Harlan Stenn  <stenn@whimsy.udel.edu>
 
+	* ntpd/refclock_atom.c (atom_start): Open the device if it hasn't
+	been opened already.
+	From Dave Mills.
+
 	* configure.in: 4.0.99k8
 
 	Revert to the older automake.
